fix: form reset and popup hidden by default

--- a/blocks/popup/_hidden/popup_hidden.css
+++ b/blocks/popup/_hidden/popup_hidden.css
@@ -1,4 +1,5 @@
 .popup_hidden {
+  display: none;
   opacity: 0;
   visibility: hidden;
 }
